20061128 code: sstring_trunc() now implemented as a macro around
               sstring_chop().
20061128 code: added array_zero().
20061128 code: use of alloc_re() in dstring_catb() and dstring_cpyb().
20061210 code: closeonexec() now always returns true on non UNIX-like
               platforms.
20061210 version: corelib 0.51
20061213 code: fixed integer overflows in array and dstring.
20061215 code: dir_array interface upgrade. new functions and tests.
20061215 version: corelib 0.52
20061218 code: ht_free_ext() added.
20061218 code: fmt_u*b() functions added.
20061218 code: fixed integer overflow in iarray.
20061218 code: ht_clear() ht_clear_ext() added.
20061220 code: added squeue, sarray and sstack.
20061220 code: added fail: tags to tests.
20061120 code: added array_trunc as function, not macro.
20061120 code: scan cleanup.
20061120 code: fmt cleanup.
20070118 code: sysdeps update.
20070118 version: corelib 0.53
20070118 code: ht_() AND instead of modulo (HT_HASH_BUCKETS must be
               a power of two, this is not a problem).
20070119 code: test cleanups.
20070208 code: fixed bug in hashtable that would select the wrong key
               if two strings in the same slot shared a common prefix
               equal in length to the smaller string.
20070208 code: new cpj tools.
20070225 code: new installer.
20070225 code: libs-math, new sysdeps.
20070228 code: workaround in scan_u* for apparent gcc 3.4.6 compiler
               bug.
20070228 code: added sd-longlong sysdep. added HAVE_LONGLONG test to
               fmt and scan headers for better C90 compatibility.
20070228 code: added uint.
20070313 code: fixed uint...
20070320 code: iarray_sort and improved iarray tests.
20070322 code: fmt_float fmt_double
20070324 code: ht_clear_ext() no longer calls free(). thanks JN.
20070324 code: improved scan_double() tests.
20070324 code: scan_float() and scan_double() now accept scientific
               notation.