@@ -1,2 +1,2 @@
-t_scan_fspec.o
+t_scan_fspe1.o
 ../scan_fspec.a
