@@ -1,0 +1,2 @@
+t_scan_fspe2.o
+../scan_fspec.a
